# Assignment-2-ros2-basic

./: 0.前置小知识：cmake、setup、xml、yaml.md  1.ros导读.md  2.工作空间、功能包、节点.md  3.话题、发布、订阅.md  4.launch文件.md  5.拓展内容：服务、动作、自定义通信接口.md  README.md  homework.md
example_workspace/src/auto_complete_interfaces/: CMakeLists.txt  package.xml
example_workspace/src/auto_complete_interfaces/msg/: AutoComplete.msg
example_workspace/src/auto_complete_test/: package.xml  setup.cfg  setup.py
example_workspace/src/auto_complete_test/auto_complete_test/: auto_complete_test_node.py
example_workspace/src/example_publisher/: package.xml  setup.cfg  setup.py
example_workspace/src/example_publisher/example_publisher/: example_publisher_node.py
example_workspace/src/example_publisher_cpp/: CMakeLists.txt  package.xml
example_workspace/src/example_publisher_cpp/src/: example_publisher_cpp_node.cpp
example_workspace/src/example_service/: package.xml  setup.py
example_workspace/src/example_service/example_service/: example_service_node.py
example_workspace/src/example_service_cpp/: CMakeLists.txt  package.xml
example_workspace/src/example_service_cpp/src/: example_service_cpp_node.cpp
example_workspace/src/example_subscriber/: package.xml  setup.cfg  setup.py
example_workspace/src/example_subscriber/example_subscriber/: example_subscrber_node.py
